feedback from Gary

--- a/lefloch_sabr_fdm.bib
+++ b/lefloch_sabr_fdm.bib
@@ -1,3 +1,11 @@
+@inproceedings{lawson1976simple,
+  title={A simple efficient algorithm for the solution of heat conduction problems},
+  author={Lawson, JD and Swayne, DA},
+  booktitle={Proc. 6th Manitoba Conf. Numer. Math},
+  pages={239--250},
+  year={1976}
+}
+
 @article{johnson2009arbitrage,
   title={Arbitrage-free construction of the swaption cube},
   author={Johnson, Simon and Nonas, Bereshad},
@@ -20,7 +28,7 @@
 @article{floc2013tr,
   title={TR-BDF2 for Stable American Option Pricing},
   author={{Le Floc'h}, Fabien},
-  journal={approved for publication in Journal of Computational Finance},
+  journal={to be published in Journal of Computational Finance},
   year={2013}
 }
 
