--- a/lefloch_sabr_fdm.tex
+++ b/lefloch_sabr_fdm.tex
@@ -94,7 +94,7 @@ In our example, in Figures \ref{fig:density_hagan_cn_500_40} and \ref{fig:densit
 The boundary condition described by equation (\ref{boundary_condition}) is applicable to all schemes considered in this section as it is independent of the time-stepping.
 
 \subsection{Rannacher}
-A common fix for Crank-Nicolson oscillations related to non smooth initial data is Rannacher time-stepping \citep{rannacher1984finite, GiCa2006}. It consists in introducing two half time-steps of implicit Euler time-stepping before applying Crank-Nicolson, because implicit Euler has much stronger damping properties. This comes at a cost in accuracy as implicit Euler is an order-1 scheme in time, especially when only a few time-steps are needed.
+A common fix for Crank-Nicolson oscillations related to non smooth initial data is Rannacher time-stepping \citep{rannacher1984finite, GiCa2006}. It consists in introducing two half time-steps of implicit Euler time-stepping before applying Crank-Nicolson, because implicit Euler has much stronger damping properties. This comes at a cost in accuracy as implicit Euler is an order-1 scheme in time, especially when only a few time-steps are needed. 
 The SABR density discretization will still be moment preserving if we discretize the Euler half steps as:
 \begin{align}\label{eqn_euler_1}
 Q_j^{n+\frac{1}{2}}-Q_j^n &= \frac{\delta}{2h^2} \left(M_{j+1}^{n+\frac{1}{2}}Q_{j+1}^{n+\frac{1}{2}}-2M_j^{n+\frac{1}{2}}Q_j^{n+\frac{1}{2}}+M_{j-1}^{n+\frac{1}{2}}Q_{j-1}^{n+\frac{1}{2}} \right) \\
@@ -102,9 +102,10 @@ Q_j^{n+\frac{1}{2}}-Q_j^n &= \frac{\delta}{2h^2} \left(M_{j+1}^{n+\frac{1}{2}}Q_
 Q_L^{n+\frac{1}{2}}-Q_L^n &= \frac{\delta}{2h} \left(M_{1}^{n+\frac{1}{2}}Q_{1}^{n+\frac{1}{2}}-M_0^{n+\frac{1}{2}}Q_0^{n+\frac{1}{2}}\right) \\
 Q_R^{n+\frac{1}{2}}-Q_R^n &= \frac{\delta}{2h} \left(M_{J+1}^{n+\frac{1}{2}}Q_{J+1}^{n+\frac{1}{2}}-M_J^{n+\frac{1}{2}}Q_J^{n+\frac{1}{2}}\right) 
 \end{align}
+for $j=1,...,J$ and $n=0,\frac{1}{2}, 1, \frac{3}{2}$.
 
 \subsection{Implicit Richardson Extrapolation}
-A simple Richardson extrapolation in time \citep{richardson1911approximate} on implicit Euler will also provide a nearly order-2 scheme in time, keeping strong damping properties of the implicit Euler scheme at the cost of increased computational load: the implicit Euler scheme (Equations \ref{eqn_euler_1}, \ref{eqn_euler_2}) is evaluated with $\frac{\delta}{2}$ and $\delta$. In practice it is around twice slower as Crank-Nicolson. At $t_N=0$, we apply:
+A simple Richardson extrapolation in time \citep{richardson1911approximate} on implicit Euler will also provide a nearly order-2 scheme in time, keeping strong damping properties of the implicit Euler scheme at the cost of increased computational load: the implicit Euler scheme (Equations \ref{eqn_euler_1}, \ref{eqn_euler_2}) is evaluated with $\frac{\delta}{2}$ and $\delta$. In practice it is around twice slower as Crank-Nicolson. At $t_N=T$, we apply:
 \begin{align}\label{eqn_richardson}
 Q(F) &= 2 \hat{Q}^{\frac{\delta}{2}}(F) - \hat{Q}^{\delta}(F) \\
 Q_L &= 2 \hat{Q}^{\frac{\delta}{2}}_L - \hat{Q}^{\delta}_L\\
@@ -148,6 +149,8 @@ Q_L^{n+1} &= (\sqrt{2}+1) Q_L^{n+2b} - \sqrt{2} Q_L^{n+b}\\
 Q_R^{n+1} &= (\sqrt{2}+1)  Q_R^{n+2b} - \sqrt{2} Q_R^{n+b}
 \end{split}
 \end{align}
+for $j=1,...,J$ and $n=0,...,N-1$.
+
 The scheme is moment preserving as it can also be seen as a linear combination of implicit Euler schemes.
 
 \subsection{TR-BDF2}
@@ -163,13 +166,13 @@ The weight $\alpha$ can be chosen to match Crank-Nicolson $\alpha=\frac{1}{2}$ o
 Similarly to Rannacher idea, we could use Lawson-Morris-Gourlay for the first several timesteps in order to dampen the oscillations before applying Crank-Nicolson. This would allow to keep an overall order-2 accuracy, even with a low number of time-steps. TR-BDF2 fits particularly well as its first stage is a weighted Crank-Nicolson. So one could stop doing the BDF2 stages when the solution is sufficiently smooth. 
 
 \subsection{Optimizing for Performance}
-$M(F,T)$ need to be computed for every $F_j$ and $t_n$. The performance of the overall algorithm can be greatly improved by minimizing the calls to the \texttt{pow} and \texttt{exp} functions are those are expensive. $\frac{1}{2} \alpha^2 (1+2\rho\nu z+ \nu^2 z^2) C^2(F)$ and $\rho\nu\alpha\Gamma$ are constant in time and can be thus be cached between time-steps. A further improvement is to decompose $t_{n+1}$ as $t_{n}-\delta$, then 
+$M(F,T)$ need to be computed for every $F_j$ and $t_n$, $j=0,...,J+1$, $n=0,...,N-1$. The performance of the overall algorithm can be greatly improved by minimizing the calls to the \texttt{pow} and \texttt{exp} functions are those are expensive. $\frac{1}{2} \alpha^2 (1+2\rho\nu z+ \nu^2 z^2) C^2(F)$ and $\rho\nu\alpha\Gamma$ are constant in time and can be thus be cached between time-steps. A further improvement is to decompose $t_{n+1}$ as $t_{n}+\delta$, then 
 \begin{equation}
-e^{\rho\nu\alpha\Gamma t_{n+1}}=e^{\rho\nu\alpha\Gamma t_n}e^{-\rho\nu\alpha\Gamma \delta}
+e^{\rho\nu\alpha\Gamma t_{n+1}}=e^{\rho\nu\alpha\Gamma t_n}e^{\rho\nu\alpha\Gamma \delta}
 \end{equation}
-We can therefore just compute the initial value $\frac{1}{2} \alpha^2 (1+2\rho\nu z+ \nu^2 z^2) C^2(F)e^{-\rho\nu\alpha\Gamma T}$ together with $e_j = e^{-\rho\nu\alpha\Gamma \delta}$ for each $j$ once and at each step update $M$ as:
+We can therefore just compute the initial value $\frac{1}{2} \alpha^2 (1+2\rho\nu z+ \nu^2 z^2) C^2(F)$ together with $e_j = e^{\rho\nu\alpha\Gamma \delta}$ for $j=0,...,J+1$ once and at each step update $M$ as:
 \begin{equation}
-M_j^{n+1} =e_j M_j^{n} 
+M_j^{n+1} = e_j M_j^{n} 
 \end{equation}
 This can be easily extended to multiple time-step sizes.
 
@@ -179,7 +182,7 @@ For multi-stage schemes, it is also possible to consider $M$ as piecewise consta
 \subsection{Oscillations}
 \begin{figure}[htb]
   \begin{center}  
-  \subfigure[$t_N=0$]{\label{fig:density_hagan_ran_500_5_0}
+  \subfigure[$t_N=T$]{\label{fig:density_hagan_ran_500_5_0}
   \includegraphics[width=7cm]{density_hagan_ran_500_5.eps}}
   \subfigure[Crank-Nicolson first 4 time steps with 5 time steps]{\label{fig:density_hagan_cn_500_5_5}
 \includegraphics[width=7cm]{density_hagan_cn_500_5_5.eps}}
@@ -188,10 +191,10 @@ For multi-stage schemes, it is also possible to consider $M$ as piecewise consta
   \subfigure[LMG3 first 4 time steps with 5 time steps]{\label{fig:density_hagan_lmg3_500_5_5}
 \includegraphics[width=7cm]{density_hagan_lmg3_500_5_5.eps}}
   \end{center}
-     \caption{\label{fig:density_hagan_lmg2_500_10} Probability density in Hagan PDE discretized with Crank-Nicolson}
+     \caption{\label{fig:density_hagan_lmg2_500_10} Probability density in Hagan PDE using a total of 5 time-steps}
 \end{figure}
 With the same parameters as in section \ref{section_cn}, Figure \ref{fig:density_hagan_ran_500_5_0} shows a smooth positive probability density using only a total of 5 time-steps when Rannacher smoothing is applied to Crank-Nicolson. The density computed using second or third order Lawson-Morris-Gourlay (LMG2, LMG3), Lawson-Swayne (LS), TR-BDF2 or Richardson extrapolation on implicit Euler would look very similar. Figures \ref{fig:density_hagan_ran_500_5_5} and \ref{fig:density_hagan_lmg3_500_5_5} show no apparent oscillations in the first steps.
-In contrast, Crank-Nicolson had strong oscillations visible at $t_N=0$ with 40 time steps.
+In contrast, Crank-Nicolson had strong oscillations visible at $t_N=T$ with 40 time steps.
 
 \subsection{Performance}
 \subsubsection{Hagan Example}
@@ -268,7 +271,7 @@ F_{min}(Q_L^{n+1}-Q_L^n)+ \sum_{j=1}^{J} h F_j (Q_j^{n+1}-Q_j^n) +F_{max}(Q_R^{n
 The boundary conditions ensures that the right hand side is 0, and therefore the forward is conserved between time-steps.
  
 \section{Moment conservation in TR-BDF2}
-As the first stage is just Crank-Nicolson applied to a fraction of time-step, \citep{hagan2013arbitrage} already proved the first stage is moment preserving. We will now prove that the BDF2 stage is also moment preserving. We use $n+\alpha$ to represent the value at $t_{n+1}-\alpha \delta$. We have for the second stage:
+As the first stage is just Crank-Nicolson applied to a fraction of time-step, \citep{hagan2013arbitrage} already proved the first stage is moment preserving. We will now prove that the BDF2 stage is also moment preserving. We use $n+\alpha$ to represent the value at $t_{n}+\alpha \delta$. We have for the second stage:
 
 $$(2-\alpha)Q_j^{n+1}-\frac{1}{\alpha}Q_j^{n+\alpha}+\frac{(1-\alpha)^2}{\alpha}Q_j^n=\delta(1-\alpha)\frac{\partial^2}{\partial F^2}M^{n+1}Q^{n+1}$$ 
 
@@ -333,16 +336,15 @@ Checking the moments is very useful way to check the implementation in code.
 \begin{tabular}{|c|r|r|r|r|}
 \hline
 Scheme & h & Q(f) & QL & QR\\ \hline
-LMG3 & 0.010050251256 & 1.385093838317 & 0.036952432092 & 0.000772293407\\
-LS & 0.010050251256 & 1.378440896589 & 0.036544185025 & 0.000795517005\\
-LMG2 & 0.010050251256 & 1.390732370665 & 0.037428499796 & 0.000804123398\\
-RAN & 0.010050251256 & 1.390106970156 & 0.037131299285 & 0.001024228682\\
-RE & 0.010050251256 & 1.342446053442 & 0.037048684923 & 0.000846640470\\
-TRBDF2 & 0.010050251256 & 1.378476835357 & 0.036546214687 & 0.000795763592\\
-CN & 0.010050251256 & -74.875202860513 & 0.036234916794 & 0.000811238084\\
+LMG3 & 0.010050251256 & 1.385108845032 & 0.036878097804 & 0.000775853690\\
+LS & 0.010050251256 & 1.378405046490 & 0.036466946406 & 0.000797983056\\
+LMG2 & 0.010050251256 & 1.390737156096 & 0.037351038244 & 0.000808345304\\
+RE & 0.010050251256 & 1.342391047522 & 0.036966009503 & 0.000850746756\\
+TRBDF2 & 0.010050251256 & 1.378368965895 & 0.036464938933 & 0.000797736766\\
+CN & 0.010050251256 & -76.222597308083 & 0.036145997780 & 0.000811969902\\
 \hline
 \end{tabular}
-\caption{Sample values using 500 points and 5 time-steps, $\alpha=35\%, \beta=0.25, \rho=-10\%, \nu=100\%, T=1, f=1, F_{max}=5$}
+\caption{Sample values using 500 points and 5 time-steps, $\alpha=35\%, \beta=0.25, \rho=-10\%, \nu=100\%, T=1, f=1, F_{max}=5, \delta=0.2$}
 \end{center}
 \end{table} 
 
@@ -352,43 +354,43 @@ CN & 0.010050251256 & -74.875202860513 & 0.036234916794 & 0.000811238084\\
 \begin{tiny}
 \begin{tabular}{|l|l|c|r|r||l|l|c|r|r|}
 \hline
-SpaceSteps & TimeSteps & Scheme & MaxError & Time(s) & SpaceSteps & TimeSteps & Scheme & MaxError & Time(s)\\ \hline
-500 & 2 & CN & 8.9e+01 & 2.5e-04        & 500 & 80 & CN & 4.7e-04 & 1.4e-03\\
-500 & 2 & RAN & 1.1e-01 & 3.0e-04 &       500 & 80 & RAN & 1.3e-04 & 1.4e-03\\
-500 & 2 & LMG2 & 2.9e-02 & 3.2e-04 &      500 & 80 & LMG2 & 1.5e-04 & 2.9e-03\\
-500 & 2 & LMG3 & 9.7e-03 & 3.4e-04 &      500 & 80 & LMG3 & 9.6e-05 & 4.8e-03\\
-500 & 2 & LS & 2.4e-01 & 3.0e-04 &        500 & 80 & LS & 8.2e-05 & 2.2e-03\\
-500 & 2 & TRBDF2 & 2.4e-01 & 2.9e-04 &    500 & 80 & TRBDF2 & 8.2e-05 & 2.5e-03\\
-500 & 2 & RE & 9.6e-01 & 5.7e-04 &        500 & 80 & RE & 2.1e-05 & 3.3e-03\\
-500 & 5 & CN & 7.6e+01 & 3.5e-04 &        500 & 160 & CN & 8.8e-05 & 3.0e-03\\
-500 & 5 & RAN & 8.1e-03 & 3.6e-04 &       500 & 160 & RAN & 1.0e-04 & 2.9e-03\\
-500 & 5 & LMG2 & 6.9e-03 & 4.1e-04 &      500 & 160 & LMG2 & 1.1e-04 & 5.6e-03\\
-500 & 5 & LMG3 & 1.3e-03 & 5.5e-04 &      500 & 160 & LMG3 & 9.5e-05 & 9.5e-03\\
-500 & 5 & LS & 5.4e-03 & 3.6e-04 &        500 & 160 & LS & 9.2e-05 & 4.1e-03\\
-500 & 5 & TRBDF2 & 5.3e-03 & 3.9e-04&     500 & 160 & TRBDF2 & 9.2e-05 & 4.7e-03\\
-500 & 5 & RE & 4.1e-02 & 6.0e-04 &        500 & 160 & RE & 7.0e-05 & 6.4e-03\\
-500 & 10 & CN & 5.6e+01 & 4.1e-04 &       500 & 320 & CN & 9.3e-05 & 5.1e-03\\
-500 & 10 & RAN & 2.4e-03 & 4.6e-04&       500 & 320 & RAN & 9.7e-05 & 5.1e-03\\
-500 & 10 & LMG2 & 2.4e-03 & 5.7e-04&      500 & 320 & LMG2 & 9.8e-05 & 1.1e-02\\
-500 & 10 & LMG3 & 3.4e-04 & 7.6e-04&      500 & 320 & LMG3 & 9.5e-05 & 1.8e-02\\
-500 & 10 & LS & 7.7e-04 & 4.4e-04&        500 & 320 & LS & 9.4e-05 & 7.9e-03\\
-500 & 10 & TRBDF2 & 7.6e-04 & 4.9e-04&    500 & 320 & TRBDF2 & 9.4e-05 & 9.4e-03\\
-500 & 10 & RE & 7.8e-03 & 7.0e-04&        500 & 320 & RE & 8.9e-05 & 1.2e-02\\
-500 & 20 & CN & 2.5e+01 & 4.8e-04&        500 & 640 & CN & 9.5e-05 & 9.5e-03\\
-500 & 20 & RAN & 6.4e-04 & 5.2e-04&       500 & 640 & RAN & 9.5e-05 & 9.6e-03\\
-500 & 20 & LMG2 & 7.8e-04 & 8.6e-04&      500 & 640 & LMG2 & 9.6e-05 & 2.2e-02\\
-500 & 20 & LMG3 & 1.4e-04 & 1.3e-03&      500 & 640 & LMG3 & 9.5e-05 & 3.7e-02\\
-500 & 20 & LS & 1.2e-04 & 6.8e-04&        500 & 640 & LS & 9.5e-05 & 1.6e-02\\
-500 & 20 & TRBDF2 & 1.2e-04 & 7.6e-04&    500 & 640 & TRBDF2 & 9.5e-05 & 1.8e-02\\
-500 & 20 & RE & 1.7e-03 & 1.1e-03&        500 & 640 & RE & 9.3e-05 & 2.3e-02\\
-500 & 40 & CN & 2.1e+00 & 7.7e-04&        500 & 1280 & CN & 9.5e-05 & 1.9e-02\\
-500 & 40 & RAN & 2.3e-04 & 9.2e-04&       500 & 1280 & RAN & 9.5e-05 & 1.9e-02\\
-500 & 40 & LMG2 & 2.9e-04 & 1.8e-03&      500 & 1280 & LMG2 & 9.5e-05 & 4.4e-02\\
-500 & 40 & LMG3 & 1.0e-04 & 2.5e-03&      500 & 1280 & LMG3 & 9.5e-05 & 7.4e-02\\
-500 & 40 & LS & 4.2e-05 & 1.2e-03&        500 & 1280 & LS & 9.5e-05 & 3.1e-02\\
-500 & 40 & TRBDF2 & 4.2e-05 & 1.3e-03&    500 & 1280 & TRBDF2 & 9.5e-05 & 3.7e-02\\
-500 & 40 & RE & 3.2e-04 & 1.8e-03&        500 & 1280 & RE & 9.5e-05 & 4.5e-02\\
-\hline
+SpaceSteps & TimeSteps & Scheme & MaxError & Time & SpaceSteps & TimeSteps & Scheme & MaxError & Time\\ \hline
+500 & 2 & CN & 9.1e+01 & 2.5e-04&      500 & 80 & CN & 4.8e-04 & 1.4e-03\\
+500 & 2 & RAN & 1.1e-01 & 3.0e-04&     500 & 80 & RAN & 1.3e-04 & 1.4e-03\\
+500 & 2 & LMG2 & 3.0e-02 & 2.8e-04&    500 & 80 & LMG2 & 1.5e-04 & 2.9e-03\\
+500 & 2 & LMG3 & 1.0e-02 & 3.3e-04&    500 & 80 & LMG3 & 9.6e-05 & 4.7e-03\\
+500 & 2 & LS & 2.4e-01 & 2.7e-04&      500 & 80 & LS & 8.2e-05 & 2.1e-03\\
+500 & 2 & TRBDF2 & 2.4e-01 & 2.8e-04&  500 & 80 & TRBDF2 & 8.2e-05 & 2.5e-03\\
+500 & 2 & RE & 9.6e-01 & 4.7e-04&      500 & 80 & RE & 2.1e-05 & 3.1e-03\\
+500 & 5 & CN & 7.8e+01 & 3.0e-04&      500 & 160 & CN & 8.8e-05 & 2.5e-03\\
+500 & 5 & RAN & 8.3e-03 & 3.3e-04&     500 & 160 & RAN & 1.0e-04 & 2.6e-03\\
+500 & 5 & LMG2 & 7.0e-03 & 4.0e-04&    500 & 160 & LMG2 & 1.1e-04 & 5.6e-03\\
+500 & 5 & LMG3 & 1.3e-03 & 5.3e-04&    500 & 160 & LMG3 & 9.5e-05 & 9.3e-03\\
+500 & 5 & LS & 5.4e-03 & 3.5e-04&      500 & 160 & LS & 9.2e-05 & 4.1e-03\\
+500 & 5 & TRBDF2 & 5.4e-03 & 3.8e-04&  500 & 160 & TRBDF2 & 9.2e-05 & 4.7e-03\\
+500 & 5 & RE & 4.1e-02 & 5.9e-04&      500 & 160 & RE & 7.0e-05 & 5.9e-03\\
+500 & 10 & CN & 5.7e+01 & 3.7e-04&     500 & 320 & CN & 9.3e-05 & 4.9e-03\\
+500 & 10 & RAN & 2.5e-03 & 4.1e-04&    500 & 320 & RAN & 9.7e-05 & 4.9e-03\\
+500 & 10 & LMG2 & 2.4e-03 & 5.2e-04&   500 & 320 & LMG2 & 9.8e-05 & 1.2e-02\\
+500 & 10 & LMG3 & 3.6e-04 & 7.4e-04&   500 & 320 & LMG3 & 9.5e-05 & 1.9e-02\\
+500 & 10 & LS & 7.7e-04 & 4.5e-04&     500 & 320 & LS & 9.4e-05 & 7.9e-03\\
+500 & 10 & TRBDF2 & 7.7e-04 & 4.7e-04& 500 & 320 & TRBDF2 & 9.4e-05 & 9.2e-03\\
+500 & 10 & RE & 7.8e-03 & 6.8e-04&     500 & 320 & RE & 8.9e-05 & 1.2e-02\\
+500 & 20 & CN & 2.5e+01 & 5.5e-04&     500 & 640 & CN & 9.5e-05 & 9.6e-03\\
+500 & 20 & RAN & 6.5e-04 & 5.1e-04&    500 & 640 & RAN & 9.5e-05 & 9.6e-03\\
+500 & 20 & LMG2 & 7.9e-04 & 8.9e-04&   500 & 640 & LMG2 & 9.6e-05 & 2.2e-02\\
+500 & 20 & LMG3 & 1.4e-04 & 1.3e-03&   500 & 640 & LMG3 & 9.5e-05 & 3.7e-02\\
+500 & 20 & LS & 1.2e-04 & 6.7e-04&     500 & 640 & LS & 9.5e-05 & 1.6e-02\\
+500 & 20 & TRBDF2 & 1.2e-04 & 7.5e-04& 500 & 640 & TRBDF2 & 9.5e-05 & 1.8e-02\\
+500 & 20 & RE & 1.7e-03 & 1.0e-03&     500 & 640 & RE & 9.3e-05 & 2.3e-02\\
+500 & 40 & CN & 2.1e+00 & 7.6e-04&     500 & 1280 & CN & 9.5e-05 & 1.9e-02\\
+500 & 40 & RAN & 2.3e-04 & 9.0e-04&    500 & 1280 & RAN & 9.5e-05 & 1.9e-02\\
+500 & 40 & LMG2 & 2.9e-04 & 1.8e-03&   500 & 1280 & LMG2 & 9.5e-05 & 4.4e-02\\
+500 & 40 & LMG3 & 1.0e-04 & 2.5e-03&   500 & 1280 & LMG3 & 9.5e-05 & 7.3e-02\\
+500 & 40 & LS & 4.2e-05 & 1.2e-03&     500 & 1280 & LS & 9.5e-05 & 3.1e-02\\
+500 & 40 & TRBDF2 & 4.2e-05 & 1.4e-03& 500 & 1280 & TRBDF2 & 9.5e-05 & 3.7e-02\\
+500 & 40 & RE & 3.2e-04 & 1.7e-03&     500 & 1280 & RE & 9.5e-05 & 4.5e-02\\\hline
+
 \end{tabular}
 \end{tiny}
 \caption{Density and time taken for various finite difference schemes with $\alpha=35\%, \beta=0.25, \rho=-10\%, \nu=100\%, T=1, f=1, F_{max}=5$}
