adding theorem, fix ls typos

--- a/lefloch_sabr_fdm.bib
+++ b/lefloch_sabr_fdm.bib
@@ -17,6 +17,14 @@
   publisher={Wiley Online Library}
 }
 
+@book{morton2005numerical,
+  title={Numerical solution of partial differential equations: an introduction},
+  author={Morton, Keith W and Mayers, David Francis},
+  year={2005},
+  publisher={Cambridge university press}
+}
+
+
 @techreport{benaim2008arbitrage,
   title={An arbitrage-free method for smile extrapolation},
   author={Benaim, Shalom and Dodgson, Matthew and Kainth, Dherminder},
