--- a/lefloch_sabr_fdm.bib
+++ b/lefloch_sabr_fdm.bib
@@ -36,7 +36,7 @@
 @article{floc2013tr,
   title={TR-BDF2 for Stable American Option Pricing},
   author={{Le Floc'h}, Fabien},
-  journal={to be published in Journal of Computational Finance},
+  journal={Journal of Computational Finance (to appear)},
   year={2013}
 }
 
