added reference to duffy

--- a/lefloch_sabr_fdm.bib
+++ b/lefloch_sabr_fdm.bib
@@ -1,3 +1,9 @@
+@article{duffy2004critique,
+  title={A Critique of the Crank Nicolson Scheme Strengths and Weaknesses for Financial Instrument Pricing},
+  author={Danie Duffy},
+  journal={Wilmott Magazine},
+  year={2004}
+}  
 @inproceedings{lawson1976simple,
   title={A simple efficient algorithm for the solution of heat conduction problems},
   author={Lawson, JD and Swayne, DA},
@@ -34,7 +40,7 @@
 
 
 @article{floc2013tr,
-  title={TR-BDF2 for Stable American Option Pricing},
+  title={{TR-BDF2} for Stable American Option Pricing},
   author={{Le Floc'h}, Fabien},
   journal={Journal of Computational Finance (to appear)},
   year={2013}
@@ -163,10 +169,11 @@
   year={2009}
 }
 
-@article{obloj2007fine,
+@article{obloj2008fine,
   title={Fine-tune your smile: Correction to Hagan et al},
   author={Obl{\'o}j, Jan},
-  journal={arXiv preprint arXiv:0708.0998},
-  year={2007}
+  journal={Wilmott Magazine},
+  volume={May/June},
+  year={2008}
 }
 
